# GLscene

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  meson.build
nbproject/: configurations.xml  launcher.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
res/: Makefile.am  app-menu.ui  fragment.glsl  glscene.desktop  glscene.gresources.xml  glsceneapp.gresource.xml  plot-dlg.ui  prefs-dlg.ui  smoke-fragment.glsl  smoke-vertex.glsl  vertex.glsl  waveshader.glsl
src/: Bump.cpp  Bump.hpp  Capture.cpp  Capture.hpp  ChunkedArray.cpp  ChunkedArray.hpp  Fft.cpp  Fft.hpp  GlPlaneView.cpp  GlPlaneView.hpp  GlSceneApp.cpp  GlSceneApp.hpp  GlSceneWindow.cpp  GlSceneWindow.hpp  Makefile.am  ObjLoader.cpp  ObjLoader.hpp  PlaneContext.cpp  PlaneContext.hpp  PlaneGeometry.cpp  PlaneGeometry.hpp  PrefDialog.cpp  PrefDialog.hpp  Pulse.cpp  Pulse.hpp  Row.cpp  Row.hpp  SmokeContext.cpp  SmokeContext.hpp  SpectrumPlot.cpp  SpectrumPlot.hpp  TextContext.cpp  TextContext.hpp  meson.build
test/: CooleyTukey.cpp  CooleyTukey.hpp  Makefile.am  fft_test.cpp  load_test.cpp  meson.build  patest.cpp  patest.hpp
