
sources = files(
     'Bump.cpp'
    ,'GlPlaneView.cpp'
    ,'GlSceneWindow.cpp'
    ,'PlaneContext.cpp'
    ,'PlaneGeometry.cpp'
    ,'Row.cpp'
    ,'TextContext.cpp'
    ,'GlSceneApp.cpp'
    ,'SmokeContext.cpp'
    ,'ChunkedArray.cpp'
    ,'Pulse.cpp'
    ,'Fft.cpp'
    ,'PrefDialog.cpp'
    ,'SpectrumPlot.cpp'
    ,'Capture.cpp'
    )

